[package]
name = "plonky"
description = "Succinct arguments for arithmetic circuits, using a scheme similar to PLONK"
version = "0.1.0"
authors = ["Daniel Lubarov"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/plonky"
keywords = ["cryptography", "SNARK"]
categories = ["cryptography"]
edition = "2018"

[dependencies]
chashmap = "2.2.2"
lazy_static = "1.4.0"
num = "0.2.1"
unroll = "0.1.4"
getrandom = "0.1.14"
rand = "0.7.3"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "field_arithmetic"
harness = false

[[bench]]
name = "bls12"
harness = false

[[bench]]
name = "g1_summations"
harness = false

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
