[package]
name = "plonky"
description = "Succinct arguments for arithmetic circuits, using a scheme similar to PLONK"
version = "0.1.0"
authors = ["Daniel Lubarov"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/plonky"
keywords = ["cryptography", "SNARK"]
categories = ["cryptography"]
edition = "2018"

[dependencies]
unroll = "0.1.4"
getrandom = "0.1.14"
rand = "0.7.3"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.2"
num = "0.2.1"

[[bench]]
name = "bigint_arithmetic"
harness = false

[[bench]]
name = "bls12_base"
harness = false

[[bench]]
name = "bls12_scalar"
harness = false

[[bench]]
name = "tweedledee_base"
harness = false

[[bench]]
name = "bls12_g1"
harness = false

[[bench]]
name = "bls12_g1_summations"
harness = false

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
