[package]
name = "plonky"
description = "Recursive SNARKs based on Plonk and Halo"
version = "0.1.0"
authors = ["Daniel Lubarov"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/plonky"
keywords = ["cryptography", "SNARK"]
categories = ["cryptography"]
edition = "2018"
default-run = "recursion"

[dependencies]
getrandom = "0.1.14"
num = "0.2.1"
rand = "0.7.3"
rayon = "1.3.0"
unroll = "0.1.4"
rand_chacha = "0.2.2"
blake3 = "0.3.3"
anyhow = "1.0.31"
once_cell = "1.4.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "bigint_arithmetic"
harness = false

[[bench]]
name = "bls12_base"
harness = false

[[bench]]
name = "bls12_scalar"
harness = false

[[bench]]
name = "tweedledee_base"
harness = false

[[bench]]
name = "bls12_g1"
harness = false

[[bench]]
name = "bls12_g1_summations"
harness = false

[[bench]]
name = "hash_to_curve"
harness = false

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
